--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-#mainNav {
-    background-color: #FFFFFF;
-}
-
 #searching-home {
     height: 25rem;
 }
@@ -9,4 +5,18 @@
 #how-works {
     background: rgb(245, 37, 100);
     background: linear-gradient(45deg, rgba(245, 37, 100, 1) 0%, rgba(5, 59, 192, 1) 50%, rgba(229, 38, 106, 1) 100%);
+}
+
+.info-card {
+    text-align: justify;
+}
+
+.menu-button:focus {
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+}
+
+.bi.bi-pen, .bi.bi-bullseye, .bi.bi-credit-card, .bi.bi-clipboard-check, .bi.bi-piggy-bank, .bi.bi-truck {
+    font-size: 5rem;
+    color: cornflowerblue;
 }
